Mon, 03 Apr 2006 21:40:39 +0200 <thp@perli.net>
	* Retry adding item to localDB on new download attept when not
	  yet added to localDB (helps when already downloaded "grey" item 
	  in available list doesn't appear in "downloaded" list)
	* Put contents of description into <![CDATA[ ... ]]> in case it 
	  includes HTML (parser chokes on entities like &amp; and also &)

Fri, 31 Mar 2006 18:13:16 +0200 <thp@perli.net>
	* Major code clean-up in gpodder.py and other modules
	* Updated strings in all source code + gladefile (for i18n)
	* Added support for itunes image ("Cover") in channel editor
	* Removed orphaned (for a very long time) download status window
	* User applications (from libplayers) only readed once now
	* Fixed gPodder window icon when running with "make test"
	* Updated gladefile (removed status, non-translatable strings)
	* Updated data/messages.pot and updated german translation (de.po)

Thu, 30 Mar 2006 23:00:44 +0200 <thp@perli.net>
	* Modified makefile for i18n purposes
	* Added data/po directory structure
	* Localized all strings in src/gpodder/*.py
	* Added data/messages.pot
	* THIS IS ONLY VERY EARLY i18n SUPPORT...
	* Please see "doc/dev/i18n.txt" for more information!

Thu, 30 Mar 2006 21:27:08 +0200 <thp@perli.net>
	* First cut of i18n preparation

Thu, 30 Mar 2006 00:03:11 +0200 <thp@perli.net>
	* Bumped version number to 0.7-svn
	* Set "debugging" variable to True again
	* Added "libplayers", which searches for feasible audio players
	* Properties dialog uses libplayers to display cute players menu

Wed, 29 Mar 2006 16:54:38 +0200 <thp@perli.net>
	* ** gPodder version 0.6 is here! **
	* Bumped version number to 0.6
	* Updated documentation files, Manifest, ...
	* Thanks to all the people who made this release possible! You rock
	* Now, also set "debugging" variable to False for release

Wed, 29 Mar 2006 16:19:07 +0200 <thp@perli.net>
	* Locking of tree_model access in libwget - should be more stable