@@ -4,6 +4,9 @@ Mon, 03 Apr 2006 21:40:39 +0200 <thp@perli.net>
 	  in available list doesn't appear in "downloaded" list)
 	* Put contents of description into <![CDATA[ ... ]]> in case it 
 	  includes HTML (parser chokes on entities like &amp; and also &)
+	* Better threading, shouldn't fuck up GUI responsiveness after 
+	  download has finished (also gives us realtime "downloading" 
+	  status updates - yeah, I've now read the pygtk threading faq..)
 
 Fri, 31 Mar 2006 18:13:16 +0200 <thp@perli.net>
 	* Major code clean-up in gpodder.py and other modules
